# meta-agent

./: .coverage  .gitignore  .ruff.toml  .taskmasterconfig  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  WEEK3-ACCEPTANCE-DEMO.md  agent_generator.py  agents.md  coverage.xml  debug_agent.py  debug_tools.py  example_spec.yaml  generated_agent.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt  research_agent_fixed.py  setup.sh  test_agent_generator.py  test_meta_agent.py  test_research_agent.py  tool_designer_agent.py.bak  turbo.json
.agents/commands/: oracle-plan.md
.github/workflows/: ci.yml  publish-to-pypi.yml  pytest.yml  python-tests.yml  release.yml  scaffold.yml
.venv-lock/: pyvenv.cfg
.venv_test/: pyvenv.cfg
.windsurfrules/: get-docs.mdc
agent_spec/: research_agent_spec.txt  weather_agent_spec.txt
agents/: research_agent.py
apps/desktop/: package.json
apps/web/: package.json  remix.config.ts  remix.env.d.ts  tsconfig.json  vitest.config.ts
docs/: README.md  amp_brief.md  architecture.md  autosave-runbook.md  bundle_layout.md  checklists.md  data_model.sql  db.md  decisions.md  delivery_plan.md  dev-setup.md  example_spec.json  generated_agent_layout.txt  implementation_plan_11.5.md  meta_agent_architecture.mmd  migration_guide.md  openai-openai-agents-python.txt  openai_agents_sdk_docs.md  repo_layout.txt  scaffolder.md  security.md  spec-editor-implementation.md  spec_v1.md  template_categorization_schema.md  templates.md  tools_and_templates.md  usage_examples.md  week2-ui-spec-panel.md  workflow_and_gates.md
docs/framework/: install-openai-agents.md
examples/: simple_agent.py
generated_agents/: weather_agent.py
generated_agents/generated_greeting_agent/: README.md  agent_implementation.py  tools.py
generated_agents/generated_research_agent/: README.md  agent_implementation.py  (+1 more)
infra/: docker-compose.yml
lock_files/: requirements-py310-lock.txt  requirements-py311-lock.txt
meta_agent/: __init__.py  agent_generator.py  cli.py  core.py  decorators.py
scripts/: bump_version.py  generate_lock_files.sh  release.sh  task-complexity-report.json  vector-ingest.ts  vector-query.ts
simple_weather_agent/: README.md
tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt
temp_sandbox_test_code/: test_script.py
test_output/: agent.py  requirements.txt
tests/: __init__.py  conftest.py  integration_test.py  simple_test.py  test_agent_generator.py  test_agent_spec.txt  test_api.py  test_cli.py  test_cli_templates.py  test_e2e.py  test_embedding_benchmark.py  test_embedding_models.py  test_embedding_search.py  test_generator.py  test_json_spec.py  test_meta_agent.py  test_object_spec_flow.py  test_orchestrator.py  test_parser.py  test_planning_engine.py  test_research_agent.py  test_simple_agent.py  test_spec_schema.py  test_state_manager.py  test_sub_agent_manager.py  test_template_engine.py  test_template_governance.py  test_utils_config.py  test_utils_logging.py
venv-py311/: pyvenv.cfg
(+193 files in other folders)
