[build-system]
requires = ["hatchling"]        # keep – still builds wheels
build-backend = "hatchling.build"

[project]
name = "meta-agent"
version = "0.1.0"      # ← static; edit as you like
requires-python = ">=3.11"
dependencies = [
  "openai-agents~=0.0.11",
  "pydantic>=2",
  "pyyaml>=6",
  "click>=8",
  "docker>=7",
  "Jinja2>=3.0.0",
  "python-dotenv>=1.0.0",
  "aiohttp~=3.9",
  "backoff>=2.2.1,<3.0.0",
  "numpy>=1.20.0",
]

[project.optional-dependencies]
test = [
  "pytest~=8.2",
  "pytest-asyncio~=0.23",
  "pytest-cov~=5.0",
  "pytest-mock~=3.12",
]

[project.scripts]
meta-agent = "meta_agent.cli.main:cli"

[tool.coverage.run]
source_pkgs = ["meta_agent", "tests"]
branch = true

[tool.pytest.ini_options]
markers = [
    "integration: mark a test as an integration test."
]

[tool.black]
line-length = 88
exclude = '''
/(
    src/\.tool_designer
    |generated_tools
    |temp_sandbox_test_code
    |\.venv
)/
'''
