[project]
name            = "meta-agent"
version         = "0.1.0"
requires-python = ">=3.11"

dependencies = [
  # Runtime
  "openai>=1.80.0,<2",           # use modern OpenAI SDK without agents
  "aiohttp~=3.12",
  "numpy>=2,<3",
  "click>=8.2,<9",
  "pydantic>=2.7,<3",
  "pyyaml>=6,<7",
  "docker>=7,<8",
  "jinja2>=3,<4",
  "python-dotenv>=1,<2",
  "backoff>=2.2,<3",
]

[project.optional-dependencies]
test = [
  "pytest~=8.2",
  "pytest-asyncio~=0.23",
  "pytest-cov~=5.0",
  "pytest-mock~=3.12",
  "pyright>=1.1.300",
]

[tool.hatch.build.targets.wheel]
packages = ["src/meta_agent"]

[tool.hatch.version]
source = "git"